fixed cookie handling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
    <head>
       <link rel="stylesheet" href="http://xinutec.org/~pippijn/static/css/home.css" type="text/css" media="screen"/>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script src="/aldor/js/jquery.cookie.js"></script>
       <title>{{ page.title }}</title>
    </head>
 
